syntax = "proto3";

package cart;

option java_multiple_files = true;
option java_package = "com.example.firstapi.grpc";

service CartService {
  rpc UpdateCart (UpdateCartRequest) returns (UpdateCartResponse);
}

message UpdateCartRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
} 

message UpdateCartResponse {
  string message = 1;
}